// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a-v1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export type Foo = string

=====================================output=====================================
export type Foo = string;

================================================================================
`;

exports[`a-v2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


export type Foo = string

=====================================output=====================================
export type Foo = string;

================================================================================
`;

exports[`c-v1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import type {Bar} from './b';
import {foo} from './b';

foo('');

function bar(x: Bar): void {}

=====================================output=====================================
import type { Bar } from "./b";
import { foo } from "./b";

foo("");

function bar(x: Bar): void {}

================================================================================
`;

exports[`c-v2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import type {Bar} from './b';
import {foo} from './b';

foo('');

export function bar(x: Bar): void {}

=====================================output=====================================
import type { Bar } from "./b";
import { foo } from "./b";

foo("");

export function bar(x: Bar): void {}

================================================================================
`;
